# AuraFrameFx-ft-Genesis---Conscience-Ai

./: .gitignore  AUTOMATION_README.md  AUTO_PROVISIONING.md  BLEEDING_EDGE_FIX.md  JAVA25_BLEEDING_EDGE_COMPLETE.md  README.md  SACRED_RULES_COMPLIANCE_REPORT.md  automate-genesis.bat  automate-genesis.ps1  build.gradle.kts  check_todos_fixed.sh  cmake-ninja-quick-test.bat  debug-ninja.bat  fix-cmake-and-build.bat  fix-cmake-ninja.bat  fix-file-locks.bat  fix-file-locks.ps1  fix-xml-colon-issue.bat  genesis-advanced-diagnostics.bat  genesis-complete-build.bat  genesis-final-fix.bat  gradle.properties  libs.versions.toml  local.properties  openapi-generator-config.json  regenerate-openapi.bat  settings.gradle.kts  settings.gradle.kts.backup  validate-bleeding-edge-rules.sh  validate-genesis-rules.sh  validate-sacred-rules.sh  verify_auto_provisioning.sh
.github/: dependabot.yml
.github/workflows/: codeql.yml  main.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: auraframefx.cpp
app/src/main/java/dev/aurakai/auraframefx/ai/agents/: NeuralWhisperAgent.kt
app/src/main/java/dev/aurakai/auraframefx/context/: ContextManager.kt
app/src/main/java/dev/aurakai/auraframefx/di/: AutoProvisioningModule.kt
app/src/main/java/dev/aurakai/auraframefx/initializers/: AppInitializerInitializer.kt
app/src/main/java/dev/aurakai/auraframefx/services/: AutoProvisioningService.kt
app/src/main/java/dev/aurakai/auraframefx/ui/screens/: OverlayScreen.kt
app/src/test/java/dev/aurakai/auraframefx/services/: AutoProvisioningServiceTest.kt
collab-canvas/: build.gradle.kts
collab-canvas/src/main/cpp/: CMakeLists.txt
colorblendr/: build.gradle.kts
core-module/: build.gradle.kts
datavein-oracle-native/: build.gradle.kts
feature-module/: build.gradle.kts
gradle/: gradle-daemon-jvm.properties  libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
jvm-test/: build.gradle.kts
module-c/: build.gradle.kts
module-d/: build.gradle.kts
module-f/: build.gradle.kts
oracle-drive-integration/: build.gradle.kts
romtools/: build.gradle.kts
romtools/src/main/cpp/: CMakeLists.txt
romtools/src/main/kotlin/dev/aurakai/auraframefx/romtools/: RomToolsManager.kt
romtools/src/main/kotlin/dev/aurakai/auraframefx/romtools/ui/: RomToolsScreen.kt
sandbox-ui/: build.gradle.kts
secure-comm/: build.gradle.kts
secure-comm/src/main/kotlin/dev/aurakai/auraframefx/securecomm/di/: SecureCommModule.kt
secure-comm/src/test/kotlin/dev/aurakai/auraframefx/securecomm/crypto/: CryptoManagerTest.kt
